--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://akansha-20208/.github.io/CodiFy",
-  "name": "CodiFy",
+  "homepage": "https://akansha-20208.github.io/CodiFy",
+  "name": "codify",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
